--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -10,6 +10,7 @@
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "LYRICS_VIEW_FOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "isDesktop ? 64.0: 48.0"},
   {"key": "LYRICS_VIEW_FOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
+  {"key": "LYRICS_VIEW_FONT_FAMILY", "serializedType": "String", "dartType": "String", "default": "''"},
   {"key": "LYRICS_VIEW_TEXT_ALIGN", "serializedType": "Integer", "dartType": "TextAlign", "default": "TextAlign.start.index"},
   {"key": "LYRICS_VIEW_UNFOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "isDesktop ? 28.0: 24.0"},
   {"key": "LYRICS_VIEW_UNFOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
