--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: harmonoid
 description: Plays & manages your music library. Looks beautiful & juicy.
 publish_to: "none"
-version: 0.3.10+5022
+version: 0.3.11+5023
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,42 +17,28 @@ dependencies:
   auto_size_text: ^3.0.0
   collection: ^1.18.0
   crypto: ^3.0.3
-  drift:
-    git:
-      url: https://github.com/alexmercerind/drift.git
-      path: ./drift
-      ref: feat/group-concat-order-by
+  drift: ^2.29.0
   dynamic_color: ^1.6.9
   ffi: ^2.1.2
-  file_picker: ^9.2.2
+  file_picker: ^10.3.3
   fluentui_system_icons: ^1.1.136
   flutter_discord_rpc: 1.0.0
   flutter_local_notifications: ^19.0.0
-  flutter_svg: ^1.1.4
-  freezed_annotation: ^2.4.4
-  go_router: ^14.2.7
+  flutter_svg: ^2.2.1
+  freezed_annotation: ^3.1.0
+  go_router: ^16.3.0
   http: ^1.2.1
   json_annotation: ^4.9.0
   lastfm:
     path: external/lastfm
   lrc: ^1.0.1
   measure_size: ^4.0.0
-  media_kit:
-    git:
-      url: https://github.com/media-kit/media-kit.git
-      path: ./media_kit
-  media_kit_libs_android_audio:
-    path: ./libs/android
-  media_kit_libs_linux:
-    git:
-      url: https://github.com/media-kit/media-kit.git
-      path: ./libs/linux/media_kit_libs_linux
+  media_kit: ^1.2.1
+  media_kit_libs_android_audio: ^1.3.8
+  media_kit_libs_linux: ^1.2.1
   media_kit_libs_macos_audio:
     path: ./libs/macos
-  media_kit_libs_windows_audio:
-    git:
-      url: https://github.com/media-kit/media-kit.git
-      path: ./libs/windows/media_kit_libs_windows_audio
+  media_kit_libs_windows_audio: ^1.0.9
   media_library:
     path: external/media_library
   mesh_gradient: ^1.3.7
@@ -62,13 +48,12 @@ dependencies:
       ref: master
   path: ^1.9.0
   path_provider: ^2.1.2
-  permission_handler: ^11.3.0
+  permission_handler: ^12.0.1
   provider: ^6.0.1
   safe_local_storage: ^2.0.1
-  share_plus: ^10.1.2
-  sqlite3: ^2.4.0
-  sqlite3_flutter_libs: ^0.5.0
-  substring_highlight: ^1.0.33
+  share_plus: ^12.0.1
+  sqlite3: ^2.9.4
+  sqlite3_flutter_libs: ^0.5.40
   syncfusion_flutter_datagrid: 24.2.7
   syncfusion_flutter_sliders: 24.2.7
   synchronized: ^3.0.0+2
@@ -88,32 +73,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.8
-  drift_dev:
-    git:
-      url: https://github.com/alexmercerind/drift.git
-      path: ./drift_dev
-      ref: feat/group-concat-order-by
-  flutter_lints: ^3.0.1
-  freezed: ^2.5.7
+  drift_dev: ^2.29.0
+  flutter_lints: ^6.0.0
+  freezed: ^3.2.3
   json_serializable: ^6.9.0
-
-dependency_overrides:
-  drift:
-    git:
-      url: https://github.com/alexmercerind/drift.git
-      path: ./drift
-      ref: feat/group-concat-order-by
-  drift_dev:
-    git:
-      url: https://github.com/alexmercerind/drift.git
-      path: ./drift_dev
-      ref: feat/group-concat-order-by
-  permission_handler_windows:
-    # Remove windows support as it causes trouble with Windows 7
-    # https://github.com/Baseflow/flutter-permission-handler/issues/1034
-    git:
-      url: https://github.com/localsend/permission_handler_windows_noop.git
-      ref: 2dadd8afbf81e0e3e4791d7144e689555e58f649
 
 flutter:
   uses-material-design: true
