feat: replaygain preamp

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,5 @@ analyzer:
     library_prefixes: ignore
     no_leading_underscores_for_library_prefixes: ignore
     use_build_context_synchronously: ignore
+formatter:
+  trailing_commas: preserve
