--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,9 @@ dev_dependencies:
   freezed: ^3.2.3
   json_serializable: ^6.9.0
 
+dependency_overrides:
+  vector_math: 2.2.0
+
 flutter:
   uses-material-design: true
   assets:
