--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   media_kit_libs_linux: ^1.2.1
   media_kit_libs_macos_audio:
     path: ./libs/macos
-  media_kit_libs_windows_audio: ^1.0.9
+  # https://github.com/harmonoid/harmonoid/issues/550
+  media_kit_libs_windows_audio: 1.0.1
   media_library:
     path: external/media_library
   mesh_gradient: ^1.3.7
