--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.2
   permission_handler: ^12.0.1
+  pool: ^1.5.2
   provider: ^6.0.1
   safe_local_storage: ^2.0.1
   share_plus: ^12.0.1
