ci: fix linux build

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -202,6 +202,7 @@ jobs:
               cd /opt
               wget -q https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.32.8-stable.tar.xz
               tar xf flutter_linux_3.32.8-stable.tar.xz
+              git config --global --add safe.directory /opt/flutter
               export PATH="/opt/flutter/bin:$PATH"
               flutter --version
 
