ci: fix linux build

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -69,6 +69,7 @@ set_target_properties(${BINARY_NAME}
 include(flutter/generated_plugins.cmake)
 
 target_link_libraries(${BINARY_NAME} PRIVATE ${MIMALLOC_LIB})
+target_link_libraries(${BINARY_NAME} PRIVATE pthread)
 
 # === Installation ===
 # By default, "installing" just makes a relocatable bundle in the build
